src/objects/UserProfile__c.object
<CustomObject>
    <fields>
        <fullName>AttachmentId__c</fullName>
        <label>AttachmentId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MapType__c</fullName>
        <label>MapType</label>
        <picklist>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UserProfiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>UserProfile</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>UserProfile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UserProfiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>